; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/psci/extr_psci.c_psci_cpu_on.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/psci/extr_psci.c_psci_cpu_on.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@PSCI_FNID_CPU_ON = common dso_local global i32 0, align 4
@psci_softc = common dso_local global %struct.TYPE_2__* null, align 8
@PSCI_FN_CPU_ON = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @psci_cpu_on(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i32, i32* @PSCI_FNID_CPU_ON, align 4
  store i32 %8, i32* %7, align 4
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @psci_softc, align 8
  %10 = icmp ne %struct.TYPE_2__* %9, null
  br i1 %10, label %11, label %18

11:                                               ; preds = %3
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @psci_softc, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = load i64, i64* @PSCI_FN_CPU_ON, align 8
  %16 = getelementptr inbounds i32, i32* %14, i64 %15
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %7, align 4
  br label %18

18:                                               ; preds = %11, %3
  %19 = load i32, i32* %7, align 4
  %20 = load i64, i64* %4, align 8
  %21 = load i64, i64* %5, align 8
  %22 = load i64, i64* %6, align 8
  %23 = call i32 @psci_call(i32 %19, i64 %20, i64 %21, i64 %22)
  ret i32 %23
}

declare dso_local i32 @psci_call(i32, i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
